--- a/SellarCode/index.html
+++ b/SellarCode/index.html
@@ -11,10 +11,17 @@
     <!--Header Section-->
 
     <header id="main- header">
-        <h1>Welcome to Staller Solutions</h1>
+        <h1>Welcome to Staller Solutions</h1> <!--Main header-->
 
-    
+        <!--Navigation manu-->
+        <nav id="main -nav">
+            <a href="index.html">Home</a>
+            <a href="about.html">About us</a>
+            <a href="#contact">Contact</a><!--internal link to the contact after section-->
+        </nav>
     </header>
+
+    <hr>
     
 </body>
 </html>
