--- a/SellarCode/index.html
+++ b/SellarCode/index.html
@@ -22,6 +22,21 @@
     </header>
 
     <hr>
+
+    <!--Introduction section-->
+    <section id="Intro-section">
+        <h2>Your panter innovation</h2> <!--section heading-->
+        <p>At Stella solutions we provide <strong>cutting -edge</strong> solutions for morden business,
+            from software developmentto<em>creative design</em>, our team is dedicated to exellence
+        </p>
+
+        <!--Image representing teamwork-->
+        <img src="images/teamwork.jpg"
+        alt="Team working together on a project."
+        style="max-width: 100%; height: auto;"> <!--Ensures image scale responsively-->
+
+    </section>
+
     
 </body>
 </html>
