--- a/SellarCode/index.html
+++ b/SellarCode/index.html
@@ -34,9 +34,25 @@
         <img src="images/teamwork.jpg"
         alt="Team working together on a project."
         style="max-width: 100%; height: auto;"> <!--Ensures image scale responsively-->
-
     </section>
-
     
+     <hr>
+        <!--Contact section-->
+        <section id="contact-section">
+            <h2> Get in touch</h2>
+            <p>Have a project in mind? Fill out our cintact form below and we will get back to you!</p>
+
+            <!--Contact form-->
+            <form id="contact form" action="/submit-contact" method="post">
+                <label for="email">Your email:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="message">Your message</label><br>
+                <textarea id="message" name="message" rows="5" cols="5" required></textarea><br><br>
+
+                <input type="submit" value="Send"> 
+            </form>
+        </section>
+    <hr>
 </body>
 </html>
