--- a/SellarCode/index.html
+++ b/SellarCode/index.html
@@ -52,7 +52,22 @@
 
                 <input type="submit" value="Send"> 
             </form>
-        </section>
+        
     <hr>
+
+    <!--IFrame for maps-->
+    <h3>Find us here</h3>
+    <iframe
+    id="Location maps"
+     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3468.7118263953266!2d30.40331647556844!3d-29.61206237514415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6bc4f1e7c8603%3A0x6f24436d4e06e7dc!2sThe%20IIE&#39;s%20Varsity%20College%20-%20Pietermaritzburg!5e0!3m2!1sen!2sza!4v1755509621114!5m2!1sen!2sza"
+     width="600"
+     height ="450"
+     style ="border: 0;"
+     allowfullscreen=""
+     loading="lazy">
+    </iframe>
+</section>
+
+
 </body>
 </html>
