--- a/SellarCode/index.html
+++ b/SellarCode/index.html
@@ -68,6 +68,10 @@
     </iframe>
 </section>
 
+<!--Footer section-->
+<footer id="main-footer">
+    <p>&copy; 2025 Stellar Solutions. All Rights reserved</p>
+</footer>
 
 </body>
 </html>
